fix: provide patch for slide-in overflow on mobile (issue #1626)

--- a/core/animations.css
+++ b/core/animations.css
@@ -841,45 +841,45 @@
 }
 
 .ease-slide-in-left {
-  max-width: 100%;
   animation: ease-kf-slide-in-left var(--ease-speed-medium) var(--ease-ease) both;
 }
+
 .ease-slide-in-right {
-  max-width: 100%;
   animation: ease-kf-slide-in-right var(--ease-speed-medium) var(--ease-ease) both;
 }
+
 .ease-slide-in-from-top {
-  max-width: 100%;
   animation: ease-kf-slide-in-from-top var(--ease-speed-medium) var(--ease-ease) both;
 }
+
 .ease-slide-in-from-bottom {
-  max-width: 100%;
   animation: ease-kf-slide-in-from-bottom var(--ease-speed-medium) var(--ease-ease) both;
 }
+
 .ease-slide-in-from-left {
-  max-width: 100%;
   animation: ease-kf-slide-in-from-left var(--ease-speed-medium) var(--ease-ease) both;
 }
+
 .ease-slide-in-from-right {
-  max-width: 100%;
   animation: ease-kf-slide-in-from-right var(--ease-speed-medium) var(--ease-ease) both;
 }
+
 .ease-slide-in-from-top-left {
-  max-width: 100%;
   animation: ease-kf-slide-in-from-top-left var(--ease-speed-medium) var(--ease-ease) both;
 }
+
 .ease-slide-in-from-top-right {
-  max-width: 100%;
   animation: ease-kf-slide-in-from-top-right var(--ease-speed-medium) var(--ease-ease) both;
 }
+
 .ease-slide-in-from-bottom-left {
-  max-width: 100%;
   animation: ease-kf-slide-in-from-bottom-left var(--ease-speed-medium) var(--ease-ease) both;
 }
+
 .ease-slide-in-from-bottom-right {
-  max-width: 100%;
   animation: ease-kf-slide-in-from-bottom-right var(--ease-speed-medium) var(--ease-ease) both;
 }
+
 .ease-flip {
   perspective: 1000px;
   backface-visibility: hidden;
